test/tests/compiler/9_functions/invalid_declarations/undeclared_fun.plx
pub fn main(none) i32 {
    #  You must declare a function before using it 
    return foo(3)
}

pub fn foo(a: i32) i32 {
    return true
}
